@@ -6,6 +6,11 @@ import com.badbones69.crazyenchantments.Starter;
 import com.badbones69.crazyenchantments.api.SkullCreator;
 import com.badbones69.crazyenchantments.utilities.misc.ColorUtils;
 import de.tr7zw.changeme.nbtapi.NBTItem;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.format.NamedTextColor;
+import net.kyori.adventure.text.serializer.legacy.LegacyComponentSerializer;
+import net.kyori.adventure.text.serializer.plain.PlainTextComponentSerializer;
+import net.md_5.bungee.api.chat.BaseComponent;
 import org.bukkit.Color;
 import org.bukkit.DyeColor;
 import org.bukkit.Material;
@@ -17,11 +22,7 @@ import org.bukkit.enchantments.Enchantment;
 import org.bukkit.entity.EntityType;
 import org.bukkit.inventory.ItemFlag;
 import org.bukkit.inventory.ItemStack;
-import org.bukkit.inventory.meta.BannerMeta;
-import org.bukkit.inventory.meta.BlockStateMeta;
-import org.bukkit.inventory.meta.ItemMeta;
-import org.bukkit.inventory.meta.LeatherArmorMeta;
-import org.bukkit.inventory.meta.PotionMeta;
+import org.bukkit.inventory.meta.*;
 import org.bukkit.persistence.PersistentDataType;
 import org.bukkit.potion.PotionData;
 import org.bukkit.potion.PotionEffectType;
@@ -39,7 +40,7 @@ public class ItemBuilder {
     private Material material;
     private int damage;
     private String itemName;
-    private final List<String> itemLore;
+    private final List<Component> itemLore;
     private int itemAmount;
 
     // Player
@@ -252,7 +253,7 @@ public class ItemBuilder {
     /**
      * Get the lore on the item.
      */
-    public List<String> getLore() {
+    public List<Component> getLore() {
         return itemLore;
     }
 
@@ -347,7 +348,7 @@ public class ItemBuilder {
             ItemMeta itemMeta = item.getItemMeta();
             assert itemMeta != null;
             itemMeta.displayName(ColorUtils.legacyTranslateColourCodes(getUpdatedName()));
-            itemMeta.setLore(getUpdatedLore());
+            itemMeta.lore(getUpdatedLore());
             if (nameSpacedData != null && nameSpacedKey != null) itemMeta.getPersistentDataContainer().set(nameSpacedKey, PersistentDataType.STRING, nameSpacedData);
 
             if (itemMeta instanceof org.bukkit.inventory.meta.Damageable) ((org.bukkit.inventory.meta.Damageable) itemMeta).setDamage(damage);
@@ -565,6 +566,16 @@ public class ItemBuilder {
      * @return The ItemBuilder with updated info.
      */
     public ItemBuilder setLore(List<String> lore) {
+        return lore(lore.stream().map(ColorUtils::legacyTranslateColourCodes).collect(Collectors.toList()));
+    }
+
+    /**
+     * Set the lore of the item in the builder. This will auto force color in all the lores that contains color code. (&a, &c, &7, etc...)
+     *
+     * @param lore The lore of the item in the builder.
+     * @return The ItemBuilder with updated info.
+     */
+    public ItemBuilder lore(List<Component> lore) {
         if (lore != null) {
             this.itemLore.clear();
 
@@ -581,7 +592,7 @@ public class ItemBuilder {
      * @return The ItemBuilder with updated info.
      */
     public ItemBuilder addLore(String lore) {
-        if (lore != null) this.itemLore.add(ColorUtils.color(lore));
+        if (lore != null) this.itemLore.add(ColorUtils.legacyTranslateColourCodes(lore));
 
         return this;
     }
@@ -616,15 +627,15 @@ public class ItemBuilder {
      *
      * @return The lore with all placeholders in it.
      */
-    public List<String> getUpdatedLore() {
-        List<String> newLore = new ArrayList<>();
+    public List<Component> getUpdatedLore() {
+        List<Component> newLore = new ArrayList<>();
 
-        for (String item : itemLore) {
+        for (Component line : itemLore) {
+            String newLine = LegacyComponentSerializer.legacyAmpersand().serialize(line); //PlainTextComponentSerializer.plainText().serialize(line);
             for (Map.Entry<String, String> placeholder : lorePlaceholders.entrySet()) {
-                item = item.replace(placeholder.getKey(), placeholder.getValue()).replace(placeholder.getKey().toLowerCase(), placeholder.getValue());
+                newLine = newLine.replace(placeholder.getKey(), placeholder.getValue()).replace(placeholder.getKey().toLowerCase(), placeholder.getValue());
             }
-
-            newLore.add(item);
+            newLore.add(ColorUtils.legacyTranslateColourCodes(newLine));
         }
 
         return newLore;
@@ -958,7 +969,7 @@ public class ItemBuilder {
             ItemMeta itemMeta = item.getItemMeta();
 
             assert itemMeta != null;
-            itemBuilder.setName(itemMeta.getDisplayName()).setLore(itemMeta.getLore());
+            itemBuilder.setName(itemMeta.getDisplayName()).lore(itemMeta.lore());
 
             NBTItem nbt = new NBTItem(item);
 
@@ -1005,7 +1016,7 @@ public class ItemBuilder {
                             itemBuilder.setAmount(1);
                         }
                     }
-                    case "lore" -> itemBuilder.setLore(Arrays.asList(value.split(",")));
+                    case "lore" -> itemBuilder.setLore(List.of(value.split(",")));
                     case "player" -> itemBuilder.setPlayerName(value);
                     case "unbreakable-item" -> {
                         if (value.isEmpty() || value.equalsIgnoreCase("true")) itemBuilder.setUnbreakable(true);
@@ -1041,7 +1052,9 @@ public class ItemBuilder {
                 }
             }
         } catch (Exception e) {
-            itemBuilder.setMaterial(Material.RED_TERRACOTTA).setName("&c&lERROR").setLore(Arrays.asList("&cThere is an error", "&cFor : &c" + (placeHolder != null ? placeHolder : "")));
+            itemBuilder.setMaterial(Material.RED_TERRACOTTA).setName("&c&lERROR")
+                    .lore(Arrays.asList(Component.text("There us an error", NamedTextColor.RED),
+                            Component.text("For : " + (placeHolder != null ? placeHolder : ""), NamedTextColor.RED)));
             Log.error(e);
         }
 
